# DC-Discord-in-C-C-Libary

./: CMakeLists.txt  README.md
build-wsl/: CMakeCache.txt  Makefile  cmake_install.cmake  discordc_example
examples/: basic_bot.c
include/discordc/: client.h  discord.h  gateway.h  models.h  rest.h  router.h  types.h
src/: client.c  gateway.c  models.c  rest.c  router.c
